apps/paperless-ngx/valkey.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: valkey-deployment
  annotations:
    reloader.stakater.com/auto: 'true'
  labels: &labels
    app.kubernetes.io/component: valkey
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels: *labels
  template:
    metadata:
      labels: *labels
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      volumes:
        - name: data
          emptyDir: {}
        - name: tmp
          emptyDir: {}
        - name: var-tmp
          emptyDir: {}
        - name: var-run
          emptyDir: {}
        - name: var-cache
          emptyDir: {}
        - name: var-log
          emptyDir: {}
      containers:
        - name: valkey
          image: docker.io/valkey/valkey:9@sha256:930b41430fb727f533c5982fe509b6f04233e26d0f7354e04de4b0d5c706e44e
          securityContext:
            privileged: false
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 1000
            readOnlyRootFilesystem: true
            capabilities:
              drop: [ALL]
          volumeMounts:
            - name: data
              mountPath: /data
            - name: tmp
              mountPath: /tmp
            - name: var-tmp
              mountPath: /var/tmp
            - name: var-run
              mountPath: /var/run
            - name: var-cache
              mountPath: /var/cache
            - name: var-log
              mountPath: /var/log
          resources:
            requests:
              memory: 100M
            limits:
              memory: 1G
          ports:
            - name: valkey
              containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: valkey-service
  labels: &labels
    app.kubernetes.io/component: valkey
spec:
  selector: *labels
  ports:
    - name: valkey
      port: 6379
      targetPort: valkey
